# dougpt

./: .gitignore  README.md  asr_pipeline.py  extraction-review.ipynb  pyproject.toml
.foam/templates/: daily-note.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/02-audio-extraction-review-pipeline/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-USER-SETUP.md  02-VERIFICATION.md
.planning/phases/02-chat-extraction-notebook-pipeline/: 02-01-PLAN.md  02-02-PLAN.md  02-RESEARCH.md
.planning/phases/02-local-speech-transcript-extraction/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/02-transcription-alignment/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-USER-SETUP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
00-dev-log/: 2026-01-01.md  2026-01-04.md  2026-01-06.md  2026-01-12.md  2026-01-18.md  2026-01-25.md  2026-02-01.md  2026-02-09.md  2026-02-28.md  2026-03-01.md
00-supporting-files/data/: Doug_and_Twitch_Chat_TAKE_OVER_EUROPE-VpmmuHlLPM0_keyframes_report.json  cropped_Doug_and_Twitch_Chat_TAKE_OVER_EUROPE-VpmmuHlLPM0_keyframes_report.json  full_chat_frames_report.json
00-supporting-files/data/audio-extraction-review/audio/: sample-batch.flac  sample-single.flac
00-supporting-files/data/audio-extraction-review/logs/: extraction-20260222T023330Z-f9bdbf0d.jsonl  extraction-20260222T023331Z-42b31623.jsonl  extraction-failures.jsonl  extraction-task1-batch.jsonl  extraction-task1-single.jsonl  transcription-20260222T023330Z-f9bdbf0d.jsonl  transcription-20260222T023331Z-42b31623.jsonl  transcription-task2-verify.jsonl
00-supporting-files/data/audio-extraction-review/runs/: run-20260222T023330Z-f9bdbf0d.json  run-20260222T023331Z-42b31623.json  run-20260222T030354Z-206b1285.json
00-supporting-files/data/audio-extraction-review/segments/: segments.json  segments.md
00-supporting-files/data/audio-extraction-review/transcripts/: sample-single.json
00-supporting-files/data/chat_frames_full_color/: report.json
00-supporting-files/data/chat_frames_test_30s_color/: report.json
00-supporting-files/data/extractions/: failed_extractions.jsonl  metrics.jsonl
00-supporting-files/data/transcripts/: README.md
00-supporting-files/data/transcripts/VpmmuHlLPM0/: prep-manifest-VpmmuHlLPM0.json  segments-VpmmuHlLPM0-normalized.jsonl  segments-VpmmuHlLPM0-raw.jsonl  transcript-manifest-VpmmuHlLPM0.json
02-development/chat-extraction/: chat-extraction-script.ipynb  chat-extraction.py
02-worktrees/asr-runner/: README.md  asr_pipeline.py  audio_prep.py  pyproject.toml
02-worktrees/asr-runner/utils/: audio.py  confidence.py  paths.py
02-worktrees/audio-extraction-review/: audio-extraction.ipynb
schemas/: __init__.py  transcript.py
src/transcription/: __init__.py  models.py
utils/: __init__.py  audio.py  export.py
