[project]
name = "dougpt"
version = "0.1.0"
description = "make a ai trained off of dougdoug's twitch chat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "marimo>=0.18.4",
    "openai>=1.91.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.0",
    "python-dotenv>=1.1.0",
]
