[project]
name = "asr-runner"
version = "0.1.0"
description = "ROCm-friendly audio prep worktree for DougDoug ASR pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.2",
    "rich>=13.9.0",
    "loguru>=0.7.2",
    "typer>=0.12.5",
    "pydantic>=2.10.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
audio-prep = "audio_prep:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]